latest moris files

--- a/src/assets/css/controllers/appleTv.css
+++ b/src/assets/css/controllers/appleTv.css
@@ -460,3 +460,17 @@
     }
         
 }
+
+
+
+
+
+
+@media only screen and (min-width: 776px) and (orientation: portrait){
+
+
+    .side_controls_grid{
+        height: 40%;
+    }
+
+}
