--- a/src/assets/css/controllers/bluRay.css
+++ b/src/assets/css/controllers/bluRay.css
@@ -145,12 +145,64 @@
 
 
 
+/*
+@media only screen and (width: 776px) and (orientation: portrait){
+    #bluRay_controller{
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 5% 1fr 1fr 1fr 5%;
+        grid-template-rows: repeat(3,1fr);
+    
+        justify-items:center;
+        align-items: center;
+    }
 
 
+    .bluRay_controller_controls_2{
+        grid-row: 1;
+        grid-column: 2/5;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        box-shadow: 0px 10px 20px 1px rgb(75, 74, 74);
+    }
+
+    .bluRay_controller_movement{
+        grid-row: 2;
+        grid-column: 2/5;
+    }
+
+    .bluRay_controller_controls{
+        grid-row: 3;
+        grid-column: 2/5;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        box-shadow: 0px -10px 20px 1px rgb(199, 199, 199);
+
+    }
+        .bluRay_controller_controls .btn_circle{
+            margin-inline: 30px;
+        }
+
+        .bluRay_controller_controls_2 .btn_circle{
+            margin-inline: 30px;
+        }
+    #transport_hide{
+        display: none;
+    }
 
 
+}
 
-
+*/
 
 
 
@@ -205,6 +257,39 @@
 #button_blue{
     background-color:blue;
     border: none;
+}
+
+
+
+
+@media only screen and (min-width: 776px) and (orientation: portrait){
+
+    .bluRay_controller_controls{
+     
+        width: 100%;
+        height: 75%;
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: 1fr;
+        box-shadow: 0px 10px 20px 1px rgb(75, 74, 74);
+    }
+
+    .bluRay_controller_controls_2{
+     
+        width: 100%;
+        height: 75%;
+        grid-template-columns: repeat(2,1fr);
+        box-shadow: 0px 10px 20px 1px rgb(75, 74, 74);
+    }
+
+    .RGYB_button{
+    
+    
+       grid-column: 1/3;
+    }
+
+    #transport_hide{
+        display: none;    
+    }
 }
 
 
