--- a/src/assets/css/controllers/roku.css
+++ b/src/assets/css/controllers/roku.css
@@ -81,3 +81,14 @@
             gap: 1rem;
         }
     }
+
+
+
+
+
+    @media only screen and (min-width: 776px) and (orientation: portrait){
+
+        .rokuSideControl{
+            height:50%
+        }
+    }
