--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -42,7 +42,34 @@ $dark-gray: rgb(70,70,70)
     color: rgb(255, 255, 255)
     width:  100%
 
-    
+
+.home_power_container
+    grid-column: 8/9
+    grid-row: 1
+    width: 100% 
+    height: 100%
+    display: flex 
+    justify-content: flex-end
+    align-items: flex-start
+#home_mute   
+    grid-column: 1/2
+    grid-row: 1
+    width: 100% 
+    height: 100%
+    display: flex 
+    justify-content: flex-start
+    align-items: flex-start
+
+.home_power_container .home_button
+    width: max-content
+    border-radius: 30px 
+    display: flex
+    justify-content: center
+    align-content: space-between
+
+.home_power_container .home_button p
+    color: black
+    text-align: ceter
 
 
 .dashboard_container
@@ -140,6 +167,28 @@ $dark-gray: rgb(70,70,70)
                 
 
 @media only screen and (max-device-width: 550px) and (orientation: portrait) 
+    .home_power_container
+        align-items: flex-start
+        justify-content: flex-end
+        z-index: 100
+
+   
+
+    .home_power_container .home_button
+        width: max-content
+        height: 2rem
+        border-radius: 30px 
+
+
+    .living_room_page .power_menu_overlay
+        grid-column: 1/9
+        width: 120%
+        position: relative
+        right: 0px
+
+    .living_room_page .power_menu
+        width: 80%
+
     .source_select_home
         padding-inline: 1rem
   
