--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -62,6 +62,15 @@
 
         height: 100%;
         width: 100%;
+
+        padding: 0%;
+        margin: 0%;
+    }
+    .light_container_global .zone_section{
+        width: 100%;
+        padding: 0%;
+        height: 100%;
+        justify-content: center
     }
 
         .light_container_global .light_wrapper{
@@ -201,6 +210,10 @@
             }
 
 
+            .light_container_global .zone_section{
+                padding: 10px;
+            }
+
         /*
         ---------------------------------------------------------------- end of Global tab
         */
@@ -288,3 +301,22 @@
     
     
     
+
+    
+@media only screen and (min-width: 776px) and (orientation: portrait){
+    .light_dashboard{
+    grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
+    }
+
+    .light_container_global{
+        grid-column: 1/13;
+        grid-row: 2/8;
+    }
+    .light_dashboard .light_container{
+        grid-column: 1/13;
+        grid-row: 2/8;
+    
+    }
+
+
+  }
