--- a/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
+++ b/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
@@ -436,3 +436,90 @@
 
 
 
+@media only screen and (min-width: 776px) and (orientation: portrait){
+
+    .pool_spa_dashboard .title_info{
+        font-size: 3.25rem;
+        grid-column: 1/13;
+        font-weight: 100;
+    }
+
+
+    
+
+   
+    .pool_spa_dashboard .nav_container{
+        display: none;
+    }
+    .pool_spa_dashboard{
+        grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        
+    }
+
+    .button_container{
+        grid-row: 2/4;
+        grid-column: 1/13;
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        grid-template-rows: repeat(2,1fr);
+
+
+       gap: 10px;
+        border-radius: 1rem;
+        height: 80%;
+
+
+        
+    }
+    .button_container .btn_square_wide{
+        width: 100%
+
+    }
+
+    .air_temp_wrapper{
+        grid-column: 3/6;
+     
+    }
+   
+
+
+    /*
+    -------------------------------------pool 
+    */
+
+    .pool_container{
+        grid-column: 1/7;
+        grid-row: 4/8;
+        height: 100%;
+        width: 100%;
+    }
+
+    .spa_container{
+        grid-column: 7/13;
+        grid-row: 4/8;
+        height: 100%;
+        width: 100%;
+
+      
+    
+    }
+
+    .container_title{
+        position: absolute;
+        border-bottom: none;
+        top: 10px;
+        right: 195px;
+        
+    }
+
+    .pool_control_button .btn_square_wide{
+        width: 7rem;
+        height: 3rem;
+
+
+    }
+
+    .button_container p{
+        font-size: .8rem;
+    }
+}
