--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -757,7 +757,7 @@
 
 
 
-@media only screen and (max-device-width: 550px) and (orientation: portrait){
+@media only screen and (max-width: 550px) and (orientation: portrait){
     #mobile_power{
         display: block;
     }
@@ -1062,7 +1062,7 @@
     }
     
         .bluRay_controller_controls_2 .btn_circle{
-            height: 4.5rem;
+            height: 4.75rem;
             width: 4.75rem;
         }
 
@@ -1200,7 +1200,7 @@
     }
 
     .logo_display .bluRay_logo img{
-        height: 3rem;
+        height: 2.5rem;
     }
 
     
@@ -1238,11 +1238,486 @@
 
 
 
+    @media only screen and (min-width: 776px) and (orientation: portrait){
+        #mobile_power{
+            display: block;
+        }
+        .generic_room{
+            grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
+    
+        }
+        .generic_room .title_info{
+          
+            font-size: x-large;
+            grid-column: 3/11;
+            text-align: center;
+        
+        
+        }
+    
+    
+        /*
+        ------------------------------------------- Power menu 
+        */
+        
+        .power_menu{
+        
+            background-color: rgb(2, 2, 2);
+            position: relative;
+            z-index: 100;
+        
+    
+            height: 50%;
+            width: 70%;
+    
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-direction: column;
+    
+            border-radius: 20px;
+    
+            animation: power-menu-load 1000ms;
+            overflow: hidden;
+        }
+    
+        .power_menu_overlay {
+            grid-column: 1 / 13;
+            grid-row: 1 / 9;
+            height: 120%;
+            width: 100%;
+            z-index: 200;
+         
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .power_menu_overlay::before {
+            content: " ";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            backdrop-filter: blur(20px);
+        }
+           
+            .power_menu_text{
+                width: 75%;
+                text-align: center;
+            }
+
+         
+      
+            /*
+            ---------------------------------------------------------------------------------------------------------- Nav
+            */   
+        .nav_container{
+            grid-column: 1/13;
+            grid-row: 8;
+        
+            display: flex;
+            height: 100%;
+    
+       
+        }
+        
+        .nav_clock{
+            display: none;
+        }
+        
+        .nav{
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+        
+        
+        /*
+        ------------------------------------------------------------------------------------------------------------- Cards
+        */
+        .generic_media_container{
+            grid-column: 1/13;
+            grid-row: 2/8;
+        }
+        .room_sources_container{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-auto-rows: 1fr;
+            position: relative;
+            top: 5px;
+            overflow: visible;
+            width: 75%;
+            height: 90%;
+         
+        }
+            .source_card{
+                height:100%;
+                width: 100%;
+            }
+                .source_card .img_container {
+                    height: 70%;
+                }
+        
+        
+    
+    
+    
+    
+        /*
+        ---------------------------------------------------------------------------------------------------------- light_container
+        */        
+        
+        .lights_app{
+            grid-column: 1 / 13;
+            grid-row: 2 / 8;
+            height: 100%;
+            width: 100%;
+            grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
+    
+       
+            border-radius: 15px;
+        }
+    
+            .light_container{
+                grid-row: 2/8;
+                grid-column: 1/10;
+                width: 90%;
+                height: 90%;
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(3, 1fr);
+    
+                top: 5px;
+                overflow: visible;
+            }
+    
+            #breakfast_nook.light_container{
+                grid-row: 1/9;
+                height: 100%;
+                grid-template-rows: repeat(4,1fr);
+            }
+                .light_tile{
+                    height: 100%;
+                    width: 100%;
+                    gap: 0;
+                    justify-content: space-evenly;
+                }
+                .light_tile .light_info p {
+                    font-size: larger;
+                }
+                    .light_tile .light_info{
+                        width:95%
+                    }
+    
+                    .light_controls{
+                        width: 100%;
+                        justify-content: space-evenly;
+                    }
+                        .light_controls .btn_circle{
+                            height: 3.5rem;
+                            width: 3.5rem;
+                        }
+                   
+        /*
+        ----------------------------------------------------------------------------------------------------- Controller layout 
+        
+        */  
+    
+     
+            .controller_layout{
+                grid-row: 2/8;
+                width: 100%;
+                height: 95%;
+                position: relative;
+                bottom: 5rem;
+              
+            }
+    
+    
+            
+        .mobile_controller_nav{
+            width: 80%;
+            height: 105%;
+    
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 10px;
+            border-bottom: solid 1px white;
+    
+     }
+           
+    
+        .currentViewing{
+            height: 100%;
+            width: 100%;
+         
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+    
+    
+        .mobile_controller_nav.btn_circle{
+            height: 3.5rem;
+            width: 3.5rem;
+        }
+        .mobile_controller_nav .btn_circle_active{
+            height: 3.5rem;
+            width: 3.5rem;
+        }
+        .mobile_controller_nav .btn_circle_active img{
+            filter: invert(0);
+        }
+    
+    
+        /*
+        ---------------------------------------------------------------------------------------------------------- Controller specific
+        */
+    
+       
+    
+            .controller{
+                width:100%;
+                height: 100%;
+            }
+    
+           
+    
+            .control-icon.top {
+                top: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+    
+            .control-icon.left {
+                top: 50%;
+                left: 20px;
+                transform: translateY(-50%);
+            }
+    
+            .control-icon.right {
+                top: 50%;
+                right: 20px;
+                transform: translateY(-50%);
+            }
+                
+            .control-icon.bottom {
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+    
+    
+    
+    
+            .bottom_row_1_controller{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                width: 100%;
+              
+            }
+        
+            .bottom_row_2_controller{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                width: 100%;
+            
+            }
+        
+    
+    
+        /*
+        ------------------- Bulray
+        */
+        .bluRay_controller_movement .btn_circle{
+            height: 4.5rem;
+            width: 4.5rem;
+        }
+        
+            .bluRay_controller_controls_2 .btn_circle{
+                height: 4.75rem;
+                width: 4.75rem;
+            }
+    
+       
+          
+    
+        /*
+        ------------------- apple Tv 
+        */
+    
+        
+        .apple_tv_controller_movement .btn_circle{
+            height: 4.5rem;
+            width: 4.5rem;
+        }
+        
+            #reboot_button{
+                grid-column: 12/15;    
+            }
+    
+        /*
+        ------------------- DTV
+        */
+    
+        .dtv_controller_movement .container .btn_circle{
+            height: 4.25rem;
+            width: 4.25rem;
+        }
+    
+        .dtv_controller_controls .btn_circle{
+            height: 4.5rem;
+            width: 4.5rem;
+        }
+    
+       
+    
+        
+        /*
+        ------------------- Roku
+        */
+    
+        .roku_controller_movement .btn_circle{
+            height: 4.25rem;
+            width: 4.25rem;
+        }
+    
+        
+    
+    
+    
+    
+        
+    
+        .bottom_row_1_controller .btn_circle{
+            height: 3rem;
+            width: 5rem;
+            border-radius: 30px;
+        }
+    
+        .bottom_row_2_controller .btn_circle{
+            height: 3rem;
+            width: 5rem;
+            border-radius: 30px;
+        }
+    
+      
+            
+    /*
+    -------------------------------------------------------------------------------------------------------- reboot, arrow back, home and power off 
+    */
+            #controller_layout_back_button{
+                grid-column: 1 / 3;
+                height: 55%;
+                width: 100%;
+                
+            }
+    
+        
+               
+            
+            #reboot_button{
+                height: 55%;
+                width: 100%;
+                grid-column: 13/ 15;
+            }
+     
+    
+    
+               .room_home_corner {
+                    grid-column: 11/13;
+                    width: 60%;
+                    height: 3rem;
+                    z-index: 100;
+    
+                }
+                   .room_home_corner .home_button{
+                        width: 100%;
+                        height: 3rem;
+                    }
+               .room_back_corner {
+                    grid-column: 1/3;
+                    width: 100%;
+                    height: 2rem;
+                    z-index: 100;
+    
+                }
+                .room_back_corner a{
+                    width: 60%;
+                    height: 3rem;
+                }
+                .room_back_corner .back_button{
+                    width: 100%;
+                    height: 3rem;
+                    z-index: 100;
+                }
+    
+               
+    /*
+    ----------------------------------------------------------------------------------------------------------------- display_logo
+    */
+    .generic_media_container .logo_display{
+        grid-row: 1 / 1;
+        height: 100%;
+        animation: logo-load 1s;
+    }
+    
+    
+    .logo_display .roku_logo img{
+        height: 2rem;
+        }
+        .logo_display .dtv_header_logo img{
+            height:1.5rem;
+        }
+    
+        .logo_display .bluRay_logo img{
+            height: 3.5rem;
+        }
+    
+        
+    
+    
+    
+    
+    
+    
+    
+    
+    /*
+    ----------------------------------------------------------------------------------------------------------------- volume container
+    */
+    
+         
+    
+            .volume_container{
+                background-color: transparent;
+                grid-column: 3/8;
+                height: 65%;
+                position: relative;
+                bottom: 1.5rem;
+                
+              
+              
+            }
+
+            
+          
+        
+    
+    
+    
 
 
 
-
-
+        }
 
 
 /*
@@ -1509,7 +1984,7 @@
     }
 
     .logo_display .bluRay_logo img{
-        height: 3rem;
+        height: 2rem;
     }
 
     
