--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -74,12 +74,12 @@ $dark-gray: rgb(70,70,70)
 
 .dashboard_container
     grid-column:2/8 
-    grid-row: 3/9
+    grid-row: 4/8
     width: 90%
-    height: 80%
+    height: 70%
     display: grid
     grid-template-columns: repeat(3,1fr)
-    grid-template-rows: repeat(2,1fr)
+    grid-auto-rows: 1fr
     gap: 8px
     position: relative
     z-index: 1
