--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -16,307 +16,495 @@
     z-index: 10;
 }
 
-.mobile_nav{
+
+
+
+
+/*
+--------------------------------------------------------------------------------- map container
+*/
+
+
+.light_map_container{
+    backdrop-filter: blur(25px);
+    grid-column: 2/13;
+    grid-row: 1/9;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    display: grid;
+    grid-template-columns: repeat(9,1fr);
+    grid-template-rows: repeat(9,1fr);
+    justify-items: center;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+}
+    .light_map_container::before{
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(70, 70, 70);
+        opacity: 0.65;
+        z-index: 0;
+        border-radius: 20px;
+    }
+/*
+------------------------------------------------------------------------------------------------------------------------------------ Map one
+*/
+
+.map_layout_1{
+    grid-column: 2/9;
+    grid-row: 1/10;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+    .map_layout_1_active{
+        grid-column: 1/8;
+        grid-row: 1/10;
+        height: 100%;
+        overflow: hidden;
+        position: relative;
+        animation: light_map_shift 1s;
+    }
+        .map_layout_1_closing{  
+            grid-column: 2/9;
+            grid-row: 1/10;
+            height: 100%;
+            overflow: hidden;
+            position: relative;
+            animation: light_map_closing 900ms;
+        }
+
+.floor_1_img{
+    filter: invert(1);
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.btn_location_1{
+    height: 4rem;
+    width: 5rem;
+    position: absolute;
+    left: 480px;
+    top: 518px;
+    border-radius: 10px;
+    border: none;
+    background-color: red;
+}
+    
+.btn_location_2{
+    height: 5.5rem;
+    width: 4rem;
+    position: absolute;
+    left: 621px;
+    top: 545px;
+    border-radius: 10px;
+    border: none;
+    background-color: blue;
+ }
+
+ .btn_location_3{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 0px;
+    top: 100px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(41, 46, 42);
+ }
+
+ .btn_location_4{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 0px;
+    top: 200px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(192, 190, 50);
+ }
+
+ .btn_location_5{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 0px;
+    top: 300px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(185, 156, 113);
+ }
+
+ .btn_location_6{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 500px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(7, 53, 121);
+ }
+
+ .btn_location_7{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 0px;
+    top: 400px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(9, 22, 65);;
+ }
+
+ .btn_location_8{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 0px;
+    top: 500px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(43, 153, 49);
+ }
+
+ .btn_location_9{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 100px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(192, 134, 25);
+ }
+ .btn_location_10{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(53, 52, 52);
+ }
+ .btn_location_11{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 300px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(189, 15, 122);
+ }
+ .btn_location_12{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 400px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(30, 73, 136);
+ }
+
+
+
+
+ .btn_location_13{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 100px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(30, 73, 136);
+ }
+
+ .btn_location_14{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(30, 73, 136);
+ }
+ 
+
+ .btn_location_15{
+    height: 5.5rem;
+    width: 5.5rem;
+    position: absolute;
+    left: 100px;
+    top: 300px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(30, 73, 136);
+ }
+ 
+ 
+ 
+
+
+/*
+------------------------------------------------------------------------------------------------------------------------------------ Map Two
+*/
+
+
+.map_layout_2{
+    grid-column: 1/10;
+    grid-row: 1/10;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+    .map_layout_2_active{
+        grid-column: 1/8;
+        grid-row: 1/10;
+        height: 100%;
+        overflow: hidden;
+        position: relative;
+        animation: light_map_shift 1s;
+    }
+        .map_layout_2_closing{  
+            grid-column: 2/9;
+            grid-row: 1/10;
+            height: 100%;
+            overflow: hidden;
+            position: relative;
+            animation: light_map_closing 900ms;
+        }
+
+
+
+.floor_2_img{
+    height: 100%;
+    filter: invert(1);
+}
+
+
+/*
+---------------------------------------------------------------------------------------------------------------------------- Out Doors
+*/
+  
+.out_door_lighting{
+    grid-column: 1/10;
+    grid-row: 1/10;    
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(6,1fr);
+    justify-content: center;
+    align-items: center;
+} 
+    .out_door_1{
+        grid-column: 1/3;
+        grid-row: 1/7;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+    }
+        .out_door_1 .button_list .btn_square{
+            height: 4rem;
+            width:  15rem;    
+        }
+
+    .out_door_2{
+        grid-column: 3/5;
+        grid-row: 1/7;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+    }   
+        .out_door_2 .button_list .btn_square{
+            height: 4rem;
+            width:  15rem;    
+        }
+
+    .out_door_3{
+        grid-column: 5/7;
+        grid-row: 1/7;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+    }
+    .out_door_3 .button_list .btn_square{
+        height: 4rem;
+        width:  15rem;    
+    }
+/*
+-------------------------------------------------------------------------------------------------- light menu 
+*/
+.light_menu_closed{
     display: none;
 }
 
-.light_dashboard .light_tile{
-    animation: none;
-}
-
-
-/*
----------------------------------------------------------------------------------
-*/
-
-
-    .light_dashboard .light_container{
-        grid-row: 2/9;
-        grid-column:2/13;
-
-        height: 100%;
-        width: 100%;
-        z-index: 0;
-
-        background-color: transparent;
-
-        display: flex;
-        justify-content: center;
-        align-content: flex-start;
-
-        align-items: center;
-        flex-wrap: wrap;
-        
-        overflow-y: scroll;
-    }
-
-    .light_dashboard .light_container .light_wrapper{
-        justify-content: center;
-   
-
-    }
-
-    .light_container_global{
-        grid-row: 2/9;
-        grid-column:2/13;
-
-        height: 100%;
-        width: 100%;
-
-        padding: 0%;
-        margin: 0%;
-    }
-    .light_container_global .zone_section{
-        width: 100%;
-        padding: 0%;
-        height: 100%;
-        justify-content: center
-    }
-
-        .light_container_global .light_wrapper{
-            justify-content: center;
-        }
-
-/*
---------------------------------------------------------------------------------------- zones 
-*/
-#global_lighting .btn_square_wide{
-    height: 10rem;
-    width: 15rem;
-    background-color: rgba(70, 70, 70, 0.55);
-    backdrop-filter: blur(25px);
-    box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
-}
-    #global_lighting .btn_square_wide img{
-        height: 35%;
-    }
-    #global_lighting .btn_square_wide p{
-        font-size: x-large;
-    }
-
-    #global_lighting #active_global{
-        background-color: rgb(62, 104, 143);
-    }
-
-
-
-.zone_section{
+.light_menu_open{
+    grid-column: 8/10;
+    grid-row: 1/10;
+    height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    background-color: rgba(70, 70, 70, 0.55);
-        backdrop-filter: blur(25px);
-    padding: 10px;
-    border-radius: 10px;
+    z-index: 100;
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+    grid-template-rows: repeat(9,1fr);
+    animation: light_menu_load 1s;
 }
 
-.zone_title{
-    margin: 0%;
-    width: 100%;
-    color: white;
-    padding-bottom: 10px;
-    font-style: normal;
-    font-weight: 100;
-    
-}
-    .light_wrapper{
+
+    .light_menu_closing{
+        grid-column: 8/10;
+        grid-row: 1/10;
+        height: 100%;
         width: 100%;
-        display: flex;
-        justify-content:  flex-start;
-        align-items: center;
-        gap: .4rem;
-        flex-wrap: wrap;
-    }
-        .light_wrapper .light_tile{
-            height: 12rem;
-            width: 12.5rem;
-            background-color: rgb(70,70,70);
-            box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5) , -2px -2px 5px rgba(0, 0, 0, 0.95);
-
-        }
-            .light_wrapper .light_info .light_name{
-             font-size: large;
-            }
-
-            .light_wrapper .light_controls .btn_circle{
-                height: 3.5rem;
-                width: 3.5rem;
-            }
-
-
-
-
-    @media only screen and (max-device-width: 550px) and (orientation: portrait){
-        .light_dashboard{
-                grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6.75%;
-        }
-
-        .title_info{
-            font-size: 1.75rem;
-            grid-column: 1/13;
-            font-weight: 100;
-        }
-
-        /*
-        ---------------------------------------------------------------- Global tab
-        */
-
-        .light_container_global{
-            grid-column: 1/13;
-            grid-row: 2/8;
-            overflow: hidden;
-            height: 100%;
-            width: 100%;
-            animation: room_selection 1000ms;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #global_lighting{
-            height: 100%;
-            overflow: hidden;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-        }
-
-        #global_lighting .light_wrapper{
-            height: 100%;
-            width: 100%;
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            grid-template-rows: repeat(6,1fr);
-            
-        }
-
-        #global_lighting .btn_square_wide{
-            height: 90%;
-            width: 100%;
-
-            background-color: rgba(70, 70, 70, 0.55);
-            backdrop-filter: blur(25px);
-            box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
-        }
-            #global_lighting .btn_square_wide p{
-                font-size: large;
-            }
-            #global_lighting .btn_square_wide img{
-                height: 30px;
-            }
-
-
-            .light_container_global .zone_section{
-                padding: 10px;
-            }
-
-        /*
-        ---------------------------------------------------------------- end of Global tab
-        */
-
-
-        .light_dashboard .nav_container {
-            display: none;
-        }
-
-        .light_dashboard .mobile_nav{
-            display: contents;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            grid-column: 1/13;
-            grid-row: 8/9;
-
-            width: 100%;
-            height: 100%;
-
-
-            backdrop-filter: blur(25px);
-            border-radius: 20px;
-            background-color: rgb(255, 255, 255, .3250);
-
-        }
-
-
-
-        
-
-        /*
-        ---------------------------------------------------------------------------------------- light container 
-        */
-    
-
-        .light_dashboard .light_container{
-            grid-column: 1/13;
-            grid-row: 2/8;
-         
-        }
-        .zone_title{
-            text-align: center;
-            color: white;
-        }
-        .light_wrapper{
-            width: 90%;
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            grid-auto-rows: 10rem;        
-            justify-items: center
-
-        }
-        .light_dashboard .light_tile{
-            height: 100%;
-            width: 100%;
-            background-color: rgb(70,70,70);
-        }
-
-    
-        
-
-
-    }
-
-
-
-
-    @media only screen and (max-height: 550px) and  (orientation: landscape){
-
-     .zone_section{
-        display: none;
-     }
-    
-        
-    
-        .light_dashboard .landscape_warning{
-            grid-column: 2/12;
-            grid-row: 2/9;
-            z-index: 10;
+        z-index: 100;
+        display: grid;
+        grid-template-columns: repeat(8,1fr);
+        grid-template-rows: repeat(9,1fr);
+        animation: light_menu_closing 1s;
      
-        }
-    }
-    
-    
-    
-
-    
-@media only screen and (min-width: 776px) and (orientation: portrait){
-    .light_dashboard{
-    grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
-    }
-
-    .light_container_global{
-        grid-column: 1/13;
-        grid-row: 2/8;
-    }
-    .light_dashboard .light_container{
-        grid-column: 1/13;
-        grid-row: 2/8;
-    
     }
 
 
-  }
+/*
+------------------------------------ buttons in light menu 
+*/
+    .light_menu_title{
+        grid-column: 2/8;
+        grid-row: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .button_list{
+        box-sizing: border-box;
+        padding: 10px;
+        grid-column: 1/9;
+        grid-row: 2/9;
+     
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        
+        height: 100%;
+        width: 100%;
+    }
+ 
+   .button_list button{
+        background-color: rgb(70, 70, 70);
+        border: solid 1px rgb(128, 128, 128);
+        width: 95%;
+        height: 5rem;
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        
+    }
+
+    .button_list button p{
+        grid-column: 2/6;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .button_list button img{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+/*
+-------------------------------- closing menu 
+*/    
+
+
+.close_menu_btn{
+    grid-column: 8/9;
+    grid-row: 1;
+  
+    height: 100%;
+    width: 100%;
+}
+    .close_menu_btn img{
+        height: 100%;
+        width: 100%;   
+        position: relative;
+        right: 10px;
+        bottom: 20px; 
+    }
+
+
+
+
+
+@keyframes light_menu_load {
+
+    0%{
+       transform: translateX(100%);
+    }
+
+    100%{
+        transform: translateX(0%);
+    }
+}
+
+
+@keyframes light_map_shift{
+    0%{
+        transform: translateX(12%);
+   
+     }
+ 
+     100%{
+         transform: translateX(0%);
+   
+     }
+}
+
+
+@keyframes light_map_closing{
+    0%{
+        transform: translateX(-12%);
+   
+     }
+ 
+     100%{
+         transform: translateX(0%);
+   
+     }
+}
+
+
+
+@keyframes light_menu_closing{
+    0%{
+        transform: translateX(0%);
+   
+     }
+ 
+     100%{
+         transform: translateX(100%);
+   
+     }
+}
