--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -188,7 +188,7 @@
 
 
 
-@media only screen and (max-device-width: 550px)  and (orientation: portrait){
+@media only screen and (max-width: 550px)  and (orientation: portrait){
     .rooms_dashboard{
         grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
     }
@@ -238,14 +238,15 @@
 */
 .room_selection_options{
 
-    grid-column: 1/13;
+    grid-column: 2/12;
     grid-row: 2/8;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-auto-rows: 25%;
     width: 100%;
     height: 90%;
-    justify-items: center
+    justify-items: center;
+  
 }
 .room_card{
     height: 100%;
