--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -14,6 +14,7 @@
     width: 100vw;
     box-sizing: border-box;
     padding: 1rem;
+    position: relative;
 }
 
 .media_off{
@@ -40,7 +41,98 @@
     color: rgb(247, 247, 247);
     text-shadow: 1px 1px 1px rgb(202, 201, 201);
 }
+
+
+
+/*
+--------------------------- only used in the Arcade room in jackson's res
+*/
+.title_info_arcade{
+    z-index: 10;
+    grid-column: 2/13;
+    grid-row: 1/2;
+
+    height: 100%;
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(11,1fr);
+    grid-template-rows: repeat(2,1fr);
+    position: absolute;
     
+
+  
+
+}
+.arcade_title{
+    grid-column: 4/8;
+    font-weight: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0%;
+}
+
+.tv_section_1_div{
+    grid-row: 2;
+    grid-column: 2/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_2_div{
+    grid-row: 2;
+    grid-column: 4/6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_3_div{
+    grid-row: 2;
+    grid-column: 6/8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_4_div{
+    grid-row: 2;
+    grid-column: 8/10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+   
+
+
+
+.title_info_arcade .room_home_corner{
+    grid-column: 11/12;
+    grid-row: 1/3;
+}
+
+.title_info_arcade .btn_square{
+    width: 95%;
+    background-color: rgb(70, 70, 70);
+}
+    .title_info_arcade .btn_square p{
+        font-size: x-large;
+    }
+
+
 
 /*
 -------------------------------------------------------------------------------------- Selection a media source
@@ -57,29 +149,32 @@
     grid-template-rows: repeat(7,1fr);
     justify-items: center;
     align-items: center;
-    
     border-radius: 15px;
 }
+    #arcade_special .generic_media_container{
+        grid-column: 2/12;
+    }
+
+ 
 
 
 .room_sources_container{
     grid-column: 1/10;
     grid-row: 1/8;
 
-    background-color: transparent;
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
-
     gap: 10px;
     overflow: hidden;
     height: 100%;
     width: 100%;
 
-    }
+
+}
 
 .source_card{
     height: 15rem;
@@ -223,6 +318,11 @@
        overflow: hidden;
 
 }
+
+#arcade_special .generic_media_container .controller_layout{
+ width: 100%;
+}
+
 
    .controller_layout::before{
        content: " ";
