--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -251,6 +251,18 @@
 
 
 
+    .logs{
+        grid-column: 2/9;
+        grid-row: 8/10;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow-y: scroll;
+    }
+
  /********broswer menu*************/   
 .browser_container{
     grid-column:2/9;;
