--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -108,8 +108,22 @@ $dark-gray: rgb(70,70,70)
     border-radius: 5px
     backdrop-filter: blur(25px)
     animation: controller-load 1000ms
-    box-shadow: -3px -3px 5px #5a5656, 1px 1px 5px #ffffff8f
+    box-shadow: -3px -3px 5px rgb(68, 67, 67), 1px 1px 5px rgb(0, 0, 0)
+    position: relative
+    z-index: 1
 
+.card_container:before
+    content: " "
+    position: absolute
+    top: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    background-color: rgb(70, 70, 70)
+    opacity: 0.65
+    z-index: 0
+    border-radius: 5px
+   
 
 .card_image
     height: 35%
@@ -124,6 +138,7 @@ $dark-gray: rgb(70,70,70)
     font-weight: light
     color: rgb(255, 255, 255)
     text-align: center
+    z-index: 1
         
        
       
