--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -70,15 +70,28 @@
 
     justify-items: center;
     align-items: center;
-    background-color: rgb(70, 70, 70, .65);
+    background-color: transparent;
     text-decoration: none;
     backdrop-filter: blur(25px);
     border-radius: 5px;
-    box-shadow: 
-    -3px -3px 5px #5a5656, 
-    3px 3px 10px #ffffff8f;
+    box-shadow: -3px -3px 5px rgb(68, 67, 67), 1px 1px 5px rgb(0, 0, 0);
+    position: relative;
+    z-index: 1;
  
   }
+
+  .room_card::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(70, 70, 70);
+    opacity: 0.75;
+    z-index: 0;
+    border-radius: 5px;
+}
     .test{
         grid-column: 1/4;
         grid-row: 1/4;
@@ -87,6 +100,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        z-index: 1;
     }
     .room_card p{
         font-size: 2rem;
