--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -184,23 +184,33 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(70, 70, 70, .75);
+    background-color: transparent;
     text-decoration: none;
     backdrop-filter: blur(25px);
-    box-shadow: 
-    -3px -3px 5px #5a5656, 
-    3px 3px 10px #ffffff8f;
-    z-index: 1;
-
+    box-shadow: -3px -3px 5px rgb(68, 67, 67), 1px 1px 5px rgb(0, 0, 0);
     position: relative;
+    z-index: 1;
+    backdrop-filter: blur(25px);
+    
     animation: left-load 1s;
 
-    overflow: hidden;
 }
-    #active_source{
-        
+    .source_card::before{
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(70, 70, 70);
+        opacity: 0.75;
+        z-index: 0;
+        border-radius: 5px;
+    }
 
-        background-color: rgba(255, 255, 255, 0.5);
+
+    #active_source{
+        background-color: rgba(255, 255, 255);
     }
         #active_source p{
             color: black;
@@ -209,6 +219,8 @@
             filter: invert(0);
         }
     
+
+
 
 .source_card .img_container {
     height: 9rem;
@@ -222,6 +234,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
+}
+
+.source_card p{
+    z-index: 1;
 }
    
 
@@ -632,7 +649,7 @@
 .light_tile{
     height: 15rem;
     width: 15rem;
-    background-color: rgb(70,70,70,.75);
+   
     display: flex;
     justify-content: center;
     align-items: center;
@@ -640,15 +657,28 @@
     border-radius: 5px;
     gap: 2rem;
     backdrop-filter: blur(25px);
-    box-shadow: 
-    -3px -3px 5px #5a5656, 
-    3px 3px 10px #ffffff8f;
+    box-shadow: -3px -3px 5px rgb(68, 67, 67), 1px 1px 5px rgb(0, 0, 0);
     z-index: 1;
 
     animation: left-load 1s;
+    position: relative;
 
 }
+    .light_tile::before{
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(70, 70, 70);
+        opacity: 0.65;
+        z-index: 0;
+        border-radius: 5px;}
+
+
     .light_tile .light_info{
+        z-index: 1;
         width: 80%;
         flex-direction: column-reverse;
     }
