--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -167,15 +167,17 @@ $dark-gray: rgb(70,70,70)
         width: 100%
 
     .dashboard_container
-        display: grid
-        grid-template-columns: repeat(2,1fr)
-        grid-template-rows: repeat(3,1fr)
+        grid-row: 3/8
+        grid-column: 3/7
+        width: 100%
+        height: 100%
+        display: flex
+        justify-content: center
+        align-content: center
+        flex-direction: column
 
-    .family_room
-        width: 35%
-
-    .master_bedroom
-        width: 35%
+    .card_container
+        width: 100%
                         
 
                         
