--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -111,6 +111,14 @@ body {
         }
 
 
+  
+    button {
+      -webkit-tap-highlight-color: transparent;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+  
+
+
       
   /*logic redenering*/
   .display_none{
@@ -299,13 +307,28 @@ body {
     outline: none;
     background-color: #b9b9b9;
     box-shadow: rgb(27, 26, 26) 5px 10px 15px,rgb(255, 255, 255) 1.5px 1.5px 2px 0px inset, rgb(199, 195, 192) -1.5px -1.5px 2px 0px inset;;
-    cursor: pointer;
     transition: 0.1s ease-in-out;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;  
+    z-index: 1; 
+    
+ 
+
+      background: none;
+      
+      border: none;
+      
+      outline: none;
+      
+      box-shadow: none;
+      
+      color: inherit;
+      
+      text-shadow: none;
+      
+      
   }
 
     .btn_circle:active{
