--- a/src/assets/css/page_css/multiTvs.css
+++ b/src/assets/css/page_css/multiTvs.css
@@ -2,7 +2,158 @@
 
 
 
+.title_info_arcade{
+    z-index: 10;
+    grid-column: 2/13;
+    grid-row: 1/2;
 
+    height: 100%;
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(11,1fr);
+    grid-template-rows: repeat(2,1fr);
+    position: absolute;
+    
+}
+
+
+.arcade_title{
+    grid-column: 4/8;
+    font-weight: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0%;
+}
+
+
+
+
+.title_info_breakfast{
+    z-index: 10;
+    grid-column: 2/13;
+    grid-row: 1/2;
+
+    height: 100%;
+    width: 100%;
+
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(2,1fr);
+    position: absolute;
+}
+
+    .title_info_breakfast .arcade_title{
+        grid-column: 4/10;
+        font-weight: 100;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0%;
+    }
+
+        .title_info_breakfast .tv_section_1_div{
+            grid-row: 2;
+            grid-column: 4/7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            position: relative;
+        }
+
+        .title_info_breakfast .tv_section_2_div{
+            grid-row: 2;
+            grid-column: 7/10;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            position: relative;
+        }
+
+
+
+
+
+
+.tv_section_1_div{
+    grid-row: 2;
+    grid-column: 2/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_2_div{
+    grid-row: 2;
+    grid-column: 4/6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_3_div{
+    grid-row: 2;
+    grid-column: 6/8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+.tv_section_4_div{
+    grid-row: 2;
+    grid-column: 8/10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+}
+
+   
+
+
+
+.title_info_arcade .room_home_corner{
+    grid-column: 12/12;
+    grid-row: 1/3;
+}
+
+.title_info_arcade .btn_square{
+    width: 95%;
+    background-color: rgb(70, 70, 70);
+}
+    .title_info_arcade .btn_square p{
+        font-size: x-large;
+    }
+
+
+
+    .title_info_breakfast .room_home_corner{
+        grid-column: 12/13;
+        grid-row: 1/3;
+    }
+    
+    .title_info_breakfast .btn_square{
+        width: 95%;
+        background-color: rgb(70, 70, 70);
+    }
+        .title_info_breakfast .btn_square p{
+            font-size: x-large;
+        }
+    
 
 
 
@@ -49,6 +200,42 @@
     padding: 7px;
     border: solid 3px rgb(10, 130, 160);
 }
+
+.title_info_breakfast .drop_down_open{
+    background-color: rgb(192, 16, 16);
+    position: absolute;
+    top: 5rem;
+    height: 40rem;
+    width: 90%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    animation: drop_open 1s;
+    box-sizing: border-box;
+    padding: 7px;
+    border: solid 3px rgb(10, 130, 160);
+
+}
+
+
+.title_info_breakfast .drop_down_closing{ background-color: rgb(255, 255, 255);
+    background-color: rgb(192, 16, 16);
+    position: absolute;
+    top: 5rem;
+    height: 40rem;
+    width: 90%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    animation: drop_closing 1s;
+    box-sizing: border-box;
+    padding: 7px;
+    border: solid 3px rgb(10, 130, 160);
+    }
 
     
     
