--- a/src/assets/css/controllers/kaleidescape.css
+++ b/src/assets/css/controllers/kaleidescape.css
@@ -113,157 +113,142 @@
 
 
 
-@media (orientation: portrait) {
-        
-    #kaleidescape_controller{
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        align-items: center;
+
+
+
+/**********************  Ipad Screen specs *********************************/
+
+
+@media only screen and (min-width: 776px) and (orientation: portrait){
+
+   #kaleidescape_controller{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: 1fr;
+
+   }
+   .kaleidescape_controller_movement{
+    grid-column: 2/3;
+    grid-row: 1;
+    height: 50%;
+
+   }
+   .kaleidescape_controller_controls{
+    grid-column: 1/2;
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-auto-rows: 1fr;
+    height: 70%;
+    width: 100%;
+
+   }
+
+   .kaleidescape_controller_controls_2{
+    grid-column: 3/4;
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-auto-rows: 1fr;
+    height: 70%;
+    width: 100%;
+   }
+
+   .channel_container.channel_container{
+        grid-column: 2;
+        grid-row: 1/5;
+   }
+
+   .channel_container #chan_down{
+     height: 7rem;
+     
+   }
+   .channel_container #chan_up{
+    height: 7rem
+   }
+    .channel_container #chan_up img{
+        height: 50%;
+    }
+    .channel_container #chan_down img{
+        height: 50%;
     }
     
-    .kaleidescape_controller_movement{
-        grid-column: 3/5;
-        grid-row:1/3;
+    .circle-menu{
+        height: 320px;
+        width: 320px;
     }
-
-    .kaleidescape_controller_controls{
-        grid-column: 1/3;
-        grid-row: 2;
-        width: 100%;
-        height: 100%;
-    }
-  
-    .kaleidescape_controller_controls_2{
-        grid-column: 1/3;
-        width: 100%;
-        height: 100%;
-    }
-
 }
 
 
-/***************** only for ipad pro**********************/
+@media only screen and (max-width: 550px) and (orientation: portrait){
+    .media_2_img_display img{
+        display: none;
+    }
+    .media_1_img_display img{
+        display: none;
+    }
+    .media_3_img_display img{
+        display: none;
+    }
+    .media_4_img_display img{
+        display: none;
+    }
+    .media_5_img_display img{
+        display: none;
+    }
 
-@media screen and (max-width: 1024px) and (max-height: 1366px) and (orientation: portrait){
 
-   
-    .kaleidescape_controller_controls, .kaleidescape_controller_controls_2{
-        width: 85%;
-    }
-   
-    .kaleidescape_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .kaleidescape_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
 
-    .kaleidescape_controller_controls_2 .channel_container {
-        height: 50px;
+  #kaleidescape_controller{
+    display: grid;
+    grid-template-rows: 10% 90%;
+    grid-template-columns: 1fr;
+  }  
+
+  .kaleid_mobile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .kaleid_controller_movement{
+    position: relative;
+    bottom: 20px;
+  }
+
+  .mobile_controller_nav{
+    grid-row: 1;
+  }
+
+  .kaleid_mobile .bottom_row_1_controller{
+    gap: 5px;
+  }
+
+
+ 
+    .kaleidescape_controller_controls{
+        grid-row: 2;
     }
-        .channel_container h2{
-            margin: 0%;
-        }
-        
-    }
-    
     .kaleidescape_controller_controls_2{
-        grid-template-rows: repeat(3, 1fr);
+        grid-row: 2;
     }
 
-
-
-/**********************  Crestron Tablet *********************************/
-@media screen and (max-width: 1300px) and (max-height: 950px) and (orientation: landscape){
-
-    .kaleidescape_controller_controls .transport_button p {
-        font-size: .9rem;
+    .kaleidescape_controller_controls_2 .btn_circle{
+        height: 5rem;
+        width: 5rem;
     }
-           
-    .kaleidescape_controller_controls_2 .transport_button p {
-        font-size: .9rem;
+    .kaleidescape_controller_controls_2 #chan_up{
+        width: 4rem;
     }
-
-    .kaleidescape_controller_controls_2 .channel_container {
-       
+    .kaleidescape_controller_controls_2 #chan_title{
+        width: 4rem;
     }
-        .channel_container h2{
-            margin: 0%;
-        }
-        
+    .kaleidescape_controller_controls_2 #chan_down{
+        width: 4rem;
     }
-
-
-
-
-@media screen and (max-width: 950px) and (max-height: 1300px) and (orientation: portrait){
-
-    .kaleidescape_controller_controls, .kaleidescape_controller_controls_2{
-        width: 85%;
-    }
-   
-    .kaleidescape_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .kaleidescape_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
-
-    .kaleidescape_controller_controls_2 .channel_container {
-        height: 50px;
-    }
-        .channel_container h2{
-            margin: 0%;
-        }
-        
-    }
-
-/**********************  Ipad Screen specs *********************************/
-@media screen and (max-width: 1024px) and (max-height: 768px) and (orientation: landscape){
-
-    .kaleidescape_controller_controls .transport_button p {
-        font-size: .9rem;
-    }
-           
-    .kaleidescape_controller_controls_2 .transport_button p {
-        font-size: .9rem;
-    }
-
-    .kaleidescape_controller_controls_2 .channel_container {
-       width: 90%;
-    }
-        .channel_container h2{
-            margin: 0%;
-        }
-        
-    }
-    
-@media screen and (max-width: 768px) and (max-height: 1024px) and (orientation: portrait){
-
-        .kaleidescape_controller_controls, .kaleidescape_controller_controls_2{
-            width: 85%;
-        }
-       
-        .kaleidescape_controller_controls .transport_button p {
-            font-size: .9rem;
-        }
-               
-        .kaleidescape_controller_controls_2 .transport_button p {
-            font-size: .9rem;
-        }
-    
-        .kaleidescape_controller_controls_2 .channel_container {
-            height: 50px;
-        }
-            .channel_container h2{
-                margin: 0%;
-            }
-            
-        }
-
-
+}
 
 
 
