--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -1213,7 +1213,17 @@
             width: 4.25rem;
         }
     
+
+
+
+        /*
+        ------------------- kaleidescape 
+        */
         
+        .kaleid_controller_movement .btn_circle{
+            height: 4.25rem;
+            width: 4.25rem;
+        }
     
     
     
@@ -1763,7 +1773,7 @@
     
                .room_home_corner {
                     grid-column: 11/13;
-                    width: 60%;
+                    width: 100%;
                     height: 3rem;
                     z-index: 100;
     
@@ -1780,7 +1790,7 @@
     
                 }
                 .room_back_corner a{
-                    width: 60%;
+                    width: 100%;
                     height: 3rem;
                 }
                 .room_back_corner .back_button{
