--- a/src/assets/css/basketball/gym_dtv.css
+++ b/src/assets/css/basketball/gym_dtv.css
@@ -840,6 +840,7 @@
     position: relative;
     left: 15px;
     grid-row: 1/5;
+    
     height: 90%;
     width: 80%;
     display: grid;
@@ -887,7 +888,6 @@
 }
 
 .controller_nav_bb button {
-    background-color: #ffffff80;
     box-shadow: #0006 0 2px 4px,#0000004d 0 7px 13px -3px,#0003 0 -3px inset;
     z-index: 0;
     display: flex;
@@ -898,14 +898,82 @@
 .controller_nav_bb button:active {
     animation: ripple 1.25s ease-out forwards,fade 1.5s ease-out forwards
 }
+.controller_nav_1_selected_bb {
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+}
 
-.controller_nav_1,.controller_nav_2,.controller_nav_3 {
+.controller_nav_1_selected_bb::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(85, 37, 131);
+    opacity: 0.75;
+    z-index: 0;
+}
+    .controller_nav_1_selected_bb img{
+        filter: invert(1);
+    }
+
+
+    .controller_nav_3_selected_bb {
+        position: relative;
+        z-index: 1;
+        overflow: hidden;
+    }
+    
+    .controller_nav_3_selected_bb::before{
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(85, 37, 131);
+        opacity: 0.75;
+        z-index: 0;
+    }
+        .controller_nav_3_selected_bb img{
+            filter: invert(1);
+        }
+
+.controller_nav_1_bb,.controller_nav_2_bb,.controller_nav_3_bb {
     background-color: transparent;
     border-radius: 10px;
     border: none;
     height: 4rem;
-    width: 4rem
+    width: 4rem;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
+.controller_nav_3_bb::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.5;
+    z-index: 0;
+}
+.controller_nav_1_bb::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    opacity: 0.5;
+    z-index: 0;
+}
+
 
 .controller_nav_1_selected_bb,.controller_nav_2_selected_bb,.controller_nav_3_selected_bb {
     background-color: transparent;
@@ -913,19 +981,35 @@
     border: none;
     height: 4rem;
     width: 4rem;
-    z-index: 0
+    z-index: 0;
+    
 }
 
-.controller_nav_1_bb img,.controller_nav_2_bb img,.controller_nav_3_bb img,.controller_nav_1_selected_bb img {
+.controller_nav_1_bb img {
     height: 40px;
     filter: invert(9%) sepia(84%) saturate(0%) hue-rotate(247deg) brightness(87%) contrast(84%);
     z-index: 0
 }
 
-.controller_nav_2_selected img,.controller_nav_3_selected_bb img {
+.controller_nav_2_bb img{
+    height: 40px;
+    filter: invert(9%) sepia(84%) saturate(0%) hue-rotate(247deg) brightness(87%) contrast(84%);
+    z-index: 0
+    }
+
+.controller_nav_3_bb img{
+    height: 40px;
+    filter: invert(9%) sepia(84%) saturate(0%) hue-rotate(247deg) brightness(87%) contrast(84%);
+    z-index: 0
+    
+}
+
+.controller_nav_1_selected_bb img,.controller_nav_2_selected_bb img,.controller_nav_3_selected_bb img {
     height: 40px;
     z-index: 0;
 }
+
+
             
 
 .show_option_1_bb {
@@ -1104,7 +1188,7 @@
     grid-row: 4
 }
 
-.show_option_2 {
+.show_option_2_bb {
     grid-column: 1/7;
     grid-row: 2/7;
     width: 100%;
@@ -1172,7 +1256,7 @@
     animation-duration: 1.25s
 }
 
-.show_option_3 {
+.show_option_3_bb {
     grid-column: 1/7;
     grid-row: 2/7;
     display: flex;
@@ -1184,8 +1268,10 @@
     grid-template-rows: repeat(20,1fr);
     overflow-y: scroll;
     gap: 10px;
+    justify-items: center;
+    justify-content: center;
 }
-    .show_option_3 .transport_button  {
+    .show_option_3_bb .transport_button  {
         height:4rem;
         width:100%;
         border-radius: 10px;
@@ -1194,17 +1280,20 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-        
+        flex-direction: column;   
+        overflow: hidden;
+    }
+    .show_option_3_bb .transport_button::before{
+        border-radius: 0%; 
     }
     .show_option_3 .transport_button img{
-        height: 1.3rem;
+     height: 75%;
     }
 
         #NFL_chan p {
             margin: 0%;
             font-weight: 450;
-            font-size: 1.2rem;
+            font-size: 1rem;
         }
 
         #NFL_chan img {
@@ -1215,11 +1304,11 @@
     border-radius: 10px
 }
 
-.dtv_controller_controls_2 .show_option_1_bb {
+.dtv_controller_controls_2_bb .show_option_1_bb {
     grid-column: 1/4
 }
 
-.dtv_controller_controls_2 .transport_button p {
+.dtv_controller_controls_2_bb .transport_button p {
     font-size: 1.6rem
 }
 
@@ -1508,7 +1597,7 @@ opacity: .9;
         height: 60%;
     }
 
-    .dtv_controller_controls_2{
+    .dtv_controller_controls_2_bb{
         width: 100%;
         height: 60%;
     }
