--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -15,6 +15,7 @@
 
     z-index: 10;
   
+    position: relative;
 }
 
 .title_info{
@@ -33,6 +34,132 @@
     animation: room_selection 1000ms;
 }
 
+
+/* new power menu */
+
+    .room_selection_power_menu{
+        grid-column: 1/13;
+        grid-row: 1/9;
+        z-index: 100;
+        backdrop-filter: blur(15px);
+        height: 100%;
+        width:100%;
+        position: absolute;
+       
+      
+        display: grid;
+        grid-template-columns: repeat(10,1fr);
+        grid-template-rows: repeat(10,1fr);
+        overflow: hidden;
+        border-radius: 35px;
+        box-sizing: border-box;
+        padding: 1rem;
+        
+    }
+        .room_selection_power_menu::before{
+            content: " ";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgb(0, 0, 0);
+            opacity: 0.3;
+            z-index: 0;
+            border-radius: 15px;
+        }
+    
+    .power_menu_title{
+        grid-column: 3/9;
+        grid-row: 1/3;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: transparent;  
+        z-index: 1;
+      
+    }
+        .power_menu_title p{
+            font-size: xx-large;
+            font-weight: 600;
+            color: rgb(255, 255, 255);
+            text-shadow: 0px 0px 10px rgb(87, 87, 87);
+            border-bottom: solid 1px rgb(250, 250, 250);  
+            padding-bottom: 10px;
+           
+        }
+
+    .active_zone_menu{
+        grid-column: 2/10;
+        grid-row: 3/11;
+       
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        grid-auto-rows: 20%;
+        box-sizing: border-box;
+        padding: 2rem;
+        justify-items: center;
+        align-items: center;
+        overflow-y: scroll;
+        gap: 1rem;
+    
+    }
+        .active_zone_card{
+            width: 70%;
+            height: 100%;
+            grid-column: 1/6;
+            background-color: black;
+            border-radius: 50px;
+            display: grid;
+            grid-template-columns: repeat(6,1fr);
+            justify-items: center;
+            align-items: center;
+            border: solid 3px white;
+
+
+            background-size: 300% 300%;
+            background-image: linear-gradient(-45deg,rgb(20, 72, 133)25%,rgb(20, 95, 130) 50%,rgb(33, 98, 172) 100%);
+            -webkit-animation: AnimateBG 10s ease infinite;
+                    animation: AnimateBG 10s ease infinite;
+        }
+            .active_zone_card p{
+                grid-column: 2/6;
+                width: 100%;
+                text-align: center;
+                font-size: x-large;
+            }
+            .active_zone_card .btn_circle{
+                
+                height: 85%;
+                width: 85%;
+                border: solid 1px white;
+                background-color: rgb(195, 36, 36);
+            }
+            .active_zone_card .btn_circle img{
+                height: 70%;    
+
+            }
+
+    .room_selection_power_menu .btn_square{
+        background-color: rgb(195, 36, 36);
+        width: 100%;
+        border-radius: 50px;
+        grid-column: 10/11;
+        grid-row: 10/11;
+
+    }
+    .room_selection_power_menu .btn_square p{
+        font-size: large;
+    }
+        
+       
 
 
 /* Room selection tiles*/
@@ -121,6 +248,18 @@
         }
       }
       
+      @keyframes AnimateBG {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+
       @keyframes AnimateBG {
         0% {
           background-position: 0% 50%;
